Fix up left connector on first stage, triangle vertical alignment.

--- a/app/assets/stylesheets/pages/pipelines.scss
+++ b/app/assets/stylesheets/pages/pipelines.scss
@@ -1071,7 +1071,7 @@
 
 .cross-project-triangle {
   position: absolute;
-  top: 49px;
+  top: 48px;
   width: 0;
   height: 0;
   border-bottom: 7px solid transparent;
